<resources>
    <string name="app_name">NewsReader</string>
    <string name="login_or_register_button">Log In or Register</string>
    <string name="log_in_button">Log In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="newspaper_image">Newspaper Image</string>
    <string name="login_image">Login Image</string>
    <string name="guest_button">Continue as Guest</string>
    <string name="welcome_button">Welcome Text Image</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email_hint">Email</string>
    <string name="pw_hint">Password</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="app_bar_text">App Bar</string>
    <string name="user_name">Username</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourite Articles</string>
    <string name="sports">Sports</string>
    <string name="finance">Finance</string>
    <string name="politics">Politics</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="log_out">Log Out</string>
    <string name="categories">Categories</string>
    <string name="article_title">Article Title</string>
    <string name="author">Author</string>
    <string name="date">DD/MM/YYYY</string>
    <string name="publisher">Publisher</string>
    <string name="description">Description</string>
    <string name="feed">Feed</string>
    <string name="register_here">Register Here</string>
    <string name="existing_user">Existing User?</string>
    <string name="source_field_hint">Preferred Source (Eg. BBC)</string>
    <string name="breaking_news">Breaking News</string>
    <string name="saved_news">Saved News</string>
    <string name="search_news">Search News</string>
    <string name="article_summary">Summary</string>
    <string name="business">Business</string>
    <string name="science">Science</string>
    <string name="welcome_image">Welcome Image</string>
</resources>
