<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/linear_layout1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:id="@+id/linear_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivArticleImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/article_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/salmon"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/article_summary"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/salmon"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/author"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/salmon"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/publisher"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/salmon"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPublishedAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/date"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/salmon"
                android:textSize="10sp"
                android:textStyle="bold" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>